--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -12,13 +12,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-#root{
+#root {
   min-height: 100vh;
   display: flex;
   display: relative;
@@ -31,14 +31,14 @@
   width: 100%;
 }
 
-.bgImage{
+.bgImage {
   width: 100%;
   height: 100%;
   flex: 1;
   object-fit: cover;
 }
 
-footer{
+footer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -50,22 +50,21 @@ footer{
   padding: 1rem;
 }
 
-footer div{
+footer div {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
 }
 
-footer h2{
+footer h2 {
   font-size: 1.4rem;
 }
 
-footer h1{
+footer h1 {
   font-size: 0.9rem;
   font-weight: 200;
 }
 
-footer button{
+footer button {
   background: transparent;
   border: none;
   outline: none;
@@ -75,11 +74,11 @@ footer button{
   cursor: pointer;
 }
 
-footer button i{
+footer button i {
   font-size: 1.3rem;
 }
 
-footer button:hover{
+footer button:hover {
   opacity: 0.7;
 }
 
@@ -120,7 +119,7 @@ footer button:hover{
   background: #030615;
 }
 
-.sidebarContents h2{
+.sidebarContents h2 {
   font-weight: 200;
   font-size: 1.4rem;
 }
@@ -129,7 +128,7 @@ footer button:hover{
   flex: 1;
 }
 
-.sidebarContents button{
+.sidebarContents button {
   background: transparent;
   color: white;
   border: none;
@@ -140,11 +139,11 @@ footer button:hover{
   padding: 1rem 0;
 }
 
-.sidebarContents button:hover{
+.sidebarContents button:hover {
   opacity: 0.7;
 }
 
-.descriptionContainer{
+.descriptionContainer {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -155,37 +154,47 @@ footer button:hover{
   font-weight: 200;
 }
 
-.loadingState{
+.loadingState {
   display: flex;
   align-items: center;
   justify-content: center;
   flex: 1;
 }
 
-.loadingState i{
+.loadingState i {
   opacity: 0.2;
   font-size: 3rem;
   animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  from{
+  from {
     transform: rotate(0deg);
   }
-  to{
+
+  to {
     transform: rotate(360deg);
   }
 }
 
-@media (min-width:640px) {
-  .sidebar{
+
+@media (min-width: 640px) {
+  .sidebar {
     position: relative;
     inset: unset;
     min-width: 30%;
+    max-height: 100vh;
     box-shadow: 0 0 40px 1px #030615;
   }
 
-  .sidebarContents{
+  .sidebarContents {
     margin: unset;
+    width: 100%;
+  }
+
+  .bgOverlay {
+    right: 0;
+    left: unset;
+    width: 100vw;
   }
 }
